# noeRouge

./: CMakeLists.txt
assets/graphics/: mappings.txt
include/: enemies.h  object.h  player.h
src/: graphics.cpp  main.cpp  object.cpp  player.cpp  textureloader.cpp
